# ssd-mkdocs-sample

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .npmrc  .textlintignore  .textlintrc.json  AGENTS.md  CLAUDE.md  Environment.md  Hands-on.md  LICENSE  README.md  mise.toml  mkdocs.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  rulesync.jsonc  settings.local.json  settings.template.json
.claude/: settings.local.json
.claude/commands/: create-issue.md  create-pr.md  start-issue.md
.claude/rules/: writing-guide.md
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
.github/instructions/: copilot-instructions.md  writing-guide.instructions.md
.github/workflows/: ci-tests.yml  close-preview.yml  deploy-site.yml  role-sync-released.yml  sync-role.yml  textlint.yml
.rulesync/rules/: overview.md  writing-guide.md
.serena/: project.yml
docs/: .pages  403.html  cloud-resources-setup.md  index.md  license.md  staticwebapp.config.json  usage-guide.md  user-environment-setup.md  writing-guide.md
docs/architecture/: index.md
docs/samples/: draw-io.md  index.md  marp.md  mermaid.md
docs/stylesheets/: extra.css  pdf-fixes.css
docs/アーキテクチャー/: .pages  deploy-architecture.md  (+3 more)
infra/: Dockerfile.handson  container-app.bicep  main.bicep
scripts/: Build-HandsonImage.ps1  Deploy-HandsonEnv.ps1  Remove-HandsonEnv.ps1  Setup-AzureResources.ps1  Setup-CloudResources.ps1  Setup-Environments.ps1  Setup-Local.ps1  mkdocs-pdf.mjs  mkdocs-pdf.test.mjs  mkdocs-svg.mjs  setup-azure-resources.Tests.ps1  setup-azure-resources.ps1
(+46 files in other folders)
