[project]
name = "spec-driven-docs-infra"
version = "0.1.0"
description = "ドキュメンテーション戦略プロジェクト"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "pymdown-extensions>=10.0.0",
    "mkdocs-mermaid-to-svg>=1.1.3",
    "mkdocs-svg-to-png>=0.0.7",
    "mkdocs-mermaid2-plugin>=1.1.0",
    "mkdocs-to-pdf>=0.1.0",
    "weasyprint>=60.0",
    "playwright>=1.40.0"
]

[dependency-groups]
dev = []